fix horizontal scroll issue on mobile

--- a/css/search-flow.css
+++ b/css/search-flow.css
@@ -31,6 +31,11 @@
     font-size: 14px;
 }
 
+#home .search-box {
+    padding-left: 10px; 
+    padding-right: 10px;
+}
+
 .center-div {
     max-width: 750px;
     width: 100%;
